FAB overflow fix

--- a/src/components/Player/List/style.css
+++ b/src/components/Player/List/style.css
@@ -12,6 +12,7 @@
   bottom: 24px;
   position: absolute;
   right: 24px;
+  z-index: 1;
 }
 
 .fab {
